--- a/Ecommerce_Application/Views/Shared/_AdminLayout.cshtml
+++ b/Ecommerce_Application/Views/Shared/_AdminLayout.cshtml
@@ -24,6 +24,8 @@
             <h4 class="text-center mb-4 text-white ps-2 pe-2">Admin Dashboard</h4>
 
             <a href="#" class="nav-link admin-btn p-3 mb-2 active" data-url="/Admin/Dashboard" style="font-weight: 500">Sales</a>
+            <a href="#" class="nav-link admin-btn p-3 mb-2" data-url="/Admin/Stocks" style="font-weight: 500">Stocks</a>
+            <a href="#" class="nav-link admin-btn p-3 mb-2" data-url="/Admin/Orders" style="font-weight: 500">Orders</a>
             <a href="#" class="nav-link admin-btn p-3 mb-2" data-url="/Admin/AddProduct" style="font-weight: 500">Add Product</a>
             <a href="#" class="nav-link admin-btn p-3 mb-2" data-url="/Admin/Users" style="font-weight: 500">Users</a>
             <a href="/User/Login" class="nav-link p-3 mb-2" style="font-weight: 500">Log Out</a>
