--- a/Ecommerce_Application/Views/Shared/_CartItems.cshtml
+++ b/Ecommerce_Application/Views/Shared/_CartItems.cshtml
@@ -1,51 +1,52 @@
 ﻿@model List<Ecommerce_Application.Models.CartModel>
-@{ 
+@{
     ViewBag.TotalAmount = Model.Sum(item => item.SubTotal);
+    TempData["TotalAmountFinal"] = ViewBag.TotalAmount > 2000 ? ViewBag.TotalAmount : (ViewBag.TotalAmount + 100);
 }
 
 
 @if (Model != null && Model.Any())
 {
     <div class="hide-scrollbar" style="width: 60%; height: 500px; overflow-y: auto">
-    @foreach (var item in Model)
-    {
-        <div class="w-100 rounded-4 d-flex mb-2 pe-2" style="height: 150px; background-color: white">
-            <img src=@item.ProductImg class="img-fluid" style="height: 150px; width: 150px; border-start-start-radius: 1rem; border-end-start-radius: 1rem" />
-            <table class="ms-3">
-                <tr>
-                    <td>
-                        <h5>@item.ProductName</h5>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <h6>₹ @item.SubTotal</h6>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <div class="d-flex justify-content-evenly" style="width: 120px;height: 40px; color: white; font-size: 20px; font-weight: 600">
-                            <div onclick="updateCartItem(@item.CartItemId,'decrease', @item.Quantity, @item.MaxStock)" class="d-flex justify-content-center align-items-center" style="width: 30px; font-size: 23px; height: 40px; background-color: #80A1BA; cursor: pointer">
-                                <i class="fa-solid fa-minus"></i>
+        @foreach (var item in Model)
+        {
+            <div class="w-100 rounded-4 d-flex mb-2 pe-2" style="height: 150px; background-color: white">
+                <img src=@item.ProductImg class="img-fluid" style="height: 150px; width: 150px; border-start-start-radius: 1rem; border-end-start-radius: 1rem" />
+                <table class="ms-3">
+                    <tr>
+                        <td>
+                            <h5>@item.ProductName</h5>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <h6>₹ @item.SubTotal</h6>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td>
+                            <div class="d-flex justify-content-evenly" style="width: 120px;height: 40px; color: white; font-size: 20px; font-weight: 600">
+                                <div onclick="updateCartItem(@item.CartItemId,'decrease', @item.Quantity, @item.MaxStock)" class="d-flex justify-content-center align-items-center" style="width: 30px; font-size: 23px; height: 40px; background-color: #80A1BA; cursor: pointer">
+                                    <i class="fa-solid fa-minus"></i>
+                                </div>
+                                <div class="d-flex justify-content-center align-items-center" style="width: 30px; height: 40px; background-color: #80A1BA">
+                                    @item.Quantity
+                                </div>
+                                <div onclick="updateCartItem(@item.CartItemId,'increase',@item.Quantity, @item.MaxStock)" class="d-flex justify-content-center align-items-center" style="width: 30px; height: 40px; background-color: #80A1BA; cursor: pointer ">
+                                    <i class="fa-solid fa-plus"></i>
+                                </div>
                             </div>
-                            <div class="d-flex justify-content-center align-items-center" style="width: 30px; height: 40px; background-color: #80A1BA">
-                                @item.Quantity
-                            </div>
-                            <div onclick="updateCartItem(@item.CartItemId,'increase',@item.Quantity, @item.MaxStock)" class="d-flex justify-content-center align-items-center" style="width: 30px; height: 40px; background-color: #80A1BA; cursor: pointer ">
-                                <i class="fa-solid fa-plus"></i>
-                            </div>
-                        </div>
-                    </td>
-                </tr>
-            </table>
-            <div class="d-flex justify-content-center align-items-center ms-auto" style="cursor: pointer">
-                <button type="button" onclick="deleteCartItem(@item.CartItemId)" class="btn btn-link p-0">
-                    <i class="fa-solid fa-trash" style="color: red; font-size: 30px"></i>
-                </button>
+                        </td>
+                    </tr>
+                </table>
+                <div class="d-flex justify-content-center align-items-center ms-auto" style="cursor: pointer">
+                    <button type="button" onclick="deleteCartItem(@item.CartItemId)" class="btn btn-link p-0">
+                        <i class="fa-solid fa-trash" style="color: red; font-size: 30px"></i>
+                    </button>
+                </div>
             </div>
-        </div>
-    }
-        </div>
+        }
+    </div>
     <div class="flex-grow-1 d-flex justify-content-center align-items-center">
         <div class="rounded-4 d-flex justify-content-center align-items-center p-3" style="width: 60%; background-color: #91C4C3">
             <table style="border-collapse: separate; border-spacing: 10px 5px; width: 100%">
@@ -81,13 +82,24 @@
                         <h5>Total: </h5>
                     </td>
                     <td>
-                        <h4>@(ViewBag.TotalAmount > 2000 ? ViewBag.TotalAmount: ViewBag.TotalAmount + 100) </h4>
+                        <h4>
+                            @if (ViewBag.TotalAmount > 2000)
+                            {
+                                @ViewBag.TotalAmount
+                            }
+                            else
+                            {
+                                @(ViewBag.TotalAmount + 100)
+                            }
+                        </h4>
                     </td>
                 </tr>
                 <tr>
                     <td></td>
                     <td>
-                        <button class="btn" type="submit" style="background-color: #FFF7DD; color: black !important ">Check Out</button>
+                        <a href="@Url.Action("Checkout","Order")">
+                            <span class="btn" type="submit" style="background-color: #FFF7DD; color: black !important ">Check Out</span>
+                        </a>
                     </td>
                 </tr>
             </table>
