--- a/Ecommerce_Application/Views/Shared/_Header.cshtml
+++ b/Ecommerce_Application/Views/Shared/_Header.cshtml
@@ -56,8 +56,8 @@
                                 </a>
                                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                     <li><a href="@Url.Action("Index","Profile")" class="dropdown-item">Profile</a></li>
-                                    <li><a class="dropdown-item">Orders</a></li>
-                                    <li><a class="dropdown-item">Log Out</a></li>
+                                    <li><a href="@Url.Action("ViewOrders","Order")" class="dropdown-item">Orders</a></li>
+                                    <li><a href="@Url.Action("Logout","User")" class="dropdown-item">Log Out</a></li>
                                 </ul>
                             </li>
                         </ul>
