All admin features added.

--- a/Ecommerce_Application/Views/Shared/_AdminLayout.cshtml
+++ b/Ecommerce_Application/Views/Shared/_AdminLayout.cshtml
@@ -20,7 +20,7 @@
 </head>
 <body>
     <div class="d-flex">
-        <div class="sidebar d-flex flex-column pt-4 vh-100 text-center" style="background-color: #80A1BA">
+        <div class="sidebar d-flex flex-column pt-4 text-center" style="background-color: #80A1BA; min-height: 100vh">
             <h4 class="text-center mb-4 text-white ps-2 pe-2">Admin Dashboard</h4>
 
             <a href="#" class="nav-link admin-btn p-3 mb-2 active" data-url="/Admin/Dashboard" style="font-weight: 500">Sales</a>
