--- a/Ecommerce_Application/Views/Admin/_AddProduct.cshtml
+++ b/Ecommerce_Application/Views/Admin/_AddProduct.cshtml
@@ -1,73 +1,141 @@
 ﻿@model  List<string>
 <section style="background-color: #91C4C3; width: 100%; min-height: 100vh; padding: 15px">
     <div>
-        <h3>Add Product</h3>
-        <table style="border-collapse: separate; border-spacing: 0 10px">
-            <tr>
-                <td>
-                    <input id="productNameField" type="text" class="form-control form-control-lg" placeholder="Product Name" style="width: 350px;" />
-                </td>
-                <td class="align-middle">
-                    <h5 id="productNameError" style="display: none" class="text-danger">Enter the Name</h5>
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <div class="dropdown" style="margin-top: 10px">
-                        <button id="showCategory" class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
-                            Category
-                        </button>
-                        <ul class="dropdown-menu">
-                            @if (Model != null)
-                            {
-                                foreach (var category in Model)
+        <h3 id="secHeading">Add Product</h3>
+        <form id="productForm">
+            <table style="border-collapse: separate; border-spacing: 0 10px">
+                <tr>
+                    <td>
+                        <input id="productId" type="hidden" />
+                        <input id="productNameField" type="text" class="form-control form-control-lg" placeholder="Product Name" style="width: 350px;" />
+                    </td>
+                    <td class="align-middle">
+                        <h5 id="productNameError" style="display: none" class="text-danger">Enter the Name</h5>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <div class="dropdown" style="margin-top: 10px">
+                            <button id="showCategory" class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+                                Category
+                            </button>
+                            <ul class="dropdown-menu">
+                                @if (Model != null)
                                 {
-                                    <li><a class="dropdown-item" href="#">@category</a></li>
+                                    foreach (var category in Model)
+                                    {
+                                        <li><a class="dropdown-item" href="#">@category</a></li>
+                                    }
                                 }
-                            }
-                        </ul>
-                    </div>
-                </td>
-                <td class="align-middle">
-                    <h5 id="productCategoryError" style="display: none" class="text-danger">Select Category</h5>
-                </td>
-            </tr>
+                            </ul>
+                        </div>
+                    </td>
+                    <td class="align-middle">
+                        <h5 id="productCategoryError" style="display: none" class="text-danger">Select Category</h5>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <input id="productPriceField" type="number" class="form-control form-control-lg" min="1" placeholder="Product Price" onkeypress="return event.charCode >= 48" style="width: 350px;" />
+                    </td>
+                    <td class="align-middle">
+                        <h5 id="productPriceError" style="display: none" class="text-danger">Enter the Price</h5>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <input id="productStockField" type="number" class="form-control form-control-lg" min="1" placeholder="Product Stock" onkeypress="return event.charCode >= 48" style="width: 350px;" />
+                    </td>
+                    <td class="align-middle">
+                        <h5 id="productStockError" style="display: none" class="text-danger">Enter the Stock</h5>
+                    </td>
+                </tr>
+                <tr>
+                    <td>
+                        <input id="productImgField" type="text" class="form-control form-control-lg" placeholder="Product Img" style="width: 350px;" />
+                    </td>
+                    <td class="align-middle">
+                        <h5 id="productImgError" style="display: none" class="text-danger">Enter the Img</h5>
+                    </td>
+                </tr>
+                <tr>
+                    <td colspan="2">
+                        <button id="addProductBtn" type="button" class="btn btn-success">Add Product</button>
+                    </td>
+                </tr>
+            </table>
+        </form>
+        
+        <table class="mt-5">
             <tr>
                 <td>
-                    <input id="productPriceField" type="number" class="form-control form-control-lg" min="1" placeholder="Product Price" onkeypress="return event.charCode >= 48" style="width: 350px;" />
+                    <input id="productQuery" type="text" class="form-control form-control-lg" placeholder="Search Product" style="width: 350px;" />
                 </td>
-                <td class="align-middle">
-                    <h5 id="productPriceError" style="display: none" class="text-danger">Enter the Price</h5>
-                </td>
-            </tr>
-            <tr>
                 <td>
-                    <input id="productStockField" type="number" class="form-control form-control-lg" min="1" placeholder="Product Stock" onkeypress="return event.charCode >= 48" style="width: 350px;" />
-                </td>
-                <td class="align-middle">
-                    <h5 id="productStockError" style="display: none" class="text-danger">Enter the Stock</h5>
-                </td>
-            </tr>
-            <tr>
-                <td>
-                    <input id="productImgField" type="text" class="form-control form-control-lg" placeholder="Product Img" style="width: 350px;" />
-                </td>
-                <td class="align-middle">
-                    <h5 id="productImgError" style="display: none" class="text-danger">Enter the Img</h5>
-                </td>
-            </tr>
-            <tr>
-                <td colspan="2">
-                    <button id="addProductBtn" type="button" class="btn btn-success">Add Product</button>
+                    <button id="searchProductBtn" onclick="searchProduct()" type="button" class="ms-2 btn btn-primary">Search Product</button>
                 </td>
             </tr>
         </table>
 
+        <div id="productTableSec" style="display: none" class="mt-4">
+            <table id="productTable" class="table table-bordered table-striped">
+                <thead>
+                    <tr>
+                        <th>Name</th>
+                        <th>Category</th>
+                        <th>Price</th>
+                        <th>Img</th>
+                        <th>Stock</th>
+                        <th>Update</th>
+                        <th>Delete</th>
+                    </tr>
+                </thead>
+                <tbody>
+                </tbody>
+            </table>
+        </div>
+        <h5 id="noProductsLabel" style="display: none">No Products</h5>
+    </div>
+
+    <div id="toastMsg" class="toast-container position-fixed bottom-0 end-0 p-3">
+        <div id="toastElement" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+            <div class="toast-header">
+                <strong id="toastHead" class="me-auto">Product Added</strong>
+                <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+            </div>
+            <div id="toastBody" class="toast-body">
+                New Product Added.
+            </div>
+        </div>
     </div>
 </section>
 
+<div class="modal fade" id="deleteModal" tabindex="-1" aria-labelledby="deleteModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="deleteModalLabel">Confirm Delete</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div class="modal-body">
+                Are you sure you want to delete this product?
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                <button type="button" id="confirmDeleteBtn" class="btn btn-danger">Delete</button>
+            </div>
+        </div>
+    </div>
+</div>
+
 <script>
     $(document).ready(function () {
+
+        const toastElement = $('#toastElement');
+        const toast = new bootstrap.Toast(toastElement, {
+            autohide: true,
+            delay: 5000
+        });
 
         $('.dropdown-item').click(function (event) {
             event.preventDefault();
@@ -75,14 +143,227 @@
             $('#showCategory').text(selectedText);
         })
 
+        $('#addProductBtn').click(function () {
+            if ($('#addProductBtn').text() == "Add Product") {
+                if (validateInputs()) {
+                    const productName = $('#productNameField').val()
+                    const productCategory = $('#showCategory').text()
+                    const productPrice = $('#productPriceField').val()
+                    const productStock = $('#productStockField').val()
+                    const productImg = $('#productImgField').val()
+
+                    $.post('/Admin/AddNewProduct',
+                        {
+                            ProductName: productName,
+                            ProductCategory: productCategory,
+                            price: productPrice,
+                            imgUrl: productImg,
+                            quantity: productStock
+                        },
+                        (data) => {
+                            if (data.success) {
+                                showToast('Product Added', 'New Product Added', 'bg-success')
+                                $('#productForm')[0].reset();
+                            } else {
+                                showToast('Error', 'No Product Added', 'bg-danger')
+                            }
+                        }
+                    )
+                    $('#addProductBtn').text('Add Product')
+                    $('#secHeading').text('Add Product')
+                }
+            } else {
+                if (validateInputs()) {
+                    const productId = $('#productId').val()
+                    const productName = $('#productNameField').val()
+                    const productCategory = $('#showCategory').text()
+                    const productPrice = $('#productPriceField').val()
+                    const productStock = $('#productStockField').val()
+                    const productImg = $('#productImgField').val()
+
+                    console.log(productId);
+
+                    $.post('/Admin/UpdateProduct',
+                        {
+                            ProductId: productId,
+                            ProductName: productName,
+                            ProductCategory: productCategory,
+                            price: productPrice,
+                            imgUrl: productImg,
+                            quantity: productStock
+                        },
+                        (data) => {
+                            if (data.success) {
+                                showToast('Product Updated', 'Product Updated Successfully', 'bg-success')
+                                $('#productForm')[0].reset();
+                                $('#addProductBtn').text('Add Product')
+                                $('#secHeading').text('Add Product')
+                            } else {
+                                showToast('Error', 'No Product Updated', 'bg-danger')
+                            }
+                        }
+                    )
+                }
+            }
+        })
+
+        $(document).on('click', '.update-btn', function () {
+            const name = $(this).data('name');
+            const category = $(this).data('category');
+            const price = $(this).data('price');
+            const stock = $(this).data('stock');
+            const img = $(this).data('img');
+            const id = $(this).data('pid')
+
+            $('#productId').val(id);
+            $('#productNameField').val(name);
+            $('#productPriceField').val(price);
+            $('#productStockField').val(stock);
+            $('#productImgField').val(img);
+            $('#showCategory').text(category);
+
+            $('section').animate({ scrollTop: 0 }, 'slow');
+
+            $('#addProductBtn').text('Update Product')
+            $('#secHeading').text('Update Product')
+        });
+
+        let selectedProductId = null;
+        $(document).on('click', '.delete-btn', function () {
+            selectedProductId = $(this).data('product-id');
+            const deleteModal = new bootstrap.Modal(document.getElementById('deleteModal'));
+            deleteModal.show();
+        });
+
+        $('#confirmDeleteBtn').click(function () {
+            $.post('/Admin/DeleteProduct',
+                {
+                    productId: selectedProductId
+                },
+                (data) => {
+                    if (data.success) {
+                        showToast('Product Deleted', 'Product Deleted Successfully', 'bg-success')
+                    } else {
+                        showToast('Error', 'No Product Deleted', 'bg-danger')
+                    }
+                }
+            )
+        })
+
+        function showToast(title, message, bgClass) {
+            $('#toastElement').removeClass('bg-success bg-danger bg-warning').addClass(bgClass);
+            $('#toastHead').text(title);
+            $('#toastBody').text(message);
+
+            toast.show();
+        }
+
     })
+
+    function searchProduct() {
+        const query = $('#productQuery').val();
+
+        $.getJSON("/Product/SeachProduct", { query: query }, function (data) {
+            showTable(data);
+        });
+    }
+
+    function showTable(data) {
+        if (data.length > 0) {
+
+            $('#noProductsLabel').hide();
+            $('#productTableSec').show();
+
+            const $tableBody = $('#productTable tbody');
+            $tableBody.empty();
+
+            data.forEach((product) => {
+                const newRow =
+                    `
+            <tr>
+                <td>${product.ProductName}</td>
+                <td>${product.ProductCategory}</td>
+                <td>₹ ${product.price}</td>
+                <td>${product.imgUrl}</td>
+                <td>${product.quantity}</td>
+                <td>
+                    <button
+                    type="button"
+                    class="ms-2 btn btn-primary update-btn"
+                    data-pid=${product.ProductId}
+                    data-name="${product.ProductName}"
+                    data-category="${product.ProductCategory}"
+                    data-price="${product.price}"
+                    data-stock="${product.quantity}"
+                    data-img="${product.imgUrl}">
+                    Update
+                </button>
+                </td>
+                <td>
+                <button id="searchProductBtn"
+                type="button"
+                class="ms-2 btn btn-danger delete-btn"
+                data-product-id="${product.ProductId}">
+                Delete</button></td>
+            </tr>
+                `;
+                $tableBody.append(newRow);
+            })
+        } else {
+            $('#productTableSec').hide();
+            $('#noProductsLabel').show();
+        }
+    }
+
 
     function validateInputs() {
         const productName = $('#productNameField').val()
-        const productCategory = $('#productCategoryField').text()
+        const productCategory = $('#showCategory').text()
         const productPrice = $('#productPriceField').val()
         const productStock = $('#productStockField').val()
         const productImg = $('#productImgField').val()
+
+        if (productName.trim() === "") {
+            $("#productNameError").show()
+            return false;
+        } else {
+            $("#productNameError").hide()
+        }
+
+        if (productCategory.trim() === "Category") {
+            $("#productCategoryError").show()
+            return false;
+        } else {
+            $("#productCategoryError").hide()
+        }
+
+        if (productPrice.trim() === "") {
+            $("#productPriceError").show()
+            return false;
+        } else {
+            $("#productPriceError").hide()
+        }
+
+        if (productStock.trim() === "") {
+            $("#productStockError").show()
+            return false;
+        } else {
+            $("#productStockError").hide()
+        }
+
+        if (productImg.trim() === "") {
+            $("#productImgError").show()
+            return false;
+        } else if (isFinite(productImg)) {
+            $("#productImgError").show()
+            $("#productImgError").text("Enter a valid Link")
+            return false;
+        }
+        else {
+            $("#productImgError").hide()
+        }
+
+        return true;
     }
 </script>
 
