--- a/Ecommerce_Application/Views/Admin/_Users.cshtml
+++ b/Ecommerce_Application/Views/Admin/_Users.cshtml
@@ -1,3 +1,112 @@
-﻿<section style="background-color: red; width: 100%; min-height: 100vh ">
-</section>
+﻿@model List<Ecommerce_Application.Models.UserModel>
+<div id="userContent">
+    <section style="background-color: #91C4C3; width: 100%; min-height: 100vh; padding: 15px">
+        <div>
+            <h3> All Users</h3>
+            <div style="margin-top: 15px">
+                @if (Model != null)
+                {
+                    if (Model.Count > 0)
+                    {
+                        <div style="box-shadow: 5px 5px 7px white; border-radius: 10px">
+                            <table class="table table-striped">
+                                <thead>
+                                    <tr>
+                                        <th scope="col">Name</th>
+                                        <th scope="col">Email</th>
+                                        <th scope="col">Role</th>
+                                        <th scope="col">Action</th>
+                                    </tr>
+                                </thead>
+                                <tbody id="orderTableBody">
+                                    @foreach (var user in Model)
+                                    {
+                                        <tr>
+                                            <td>@user.Name</td>
+                                            <td>@user.Email</td>
+                                            <td>@user.Role</td>
+                                            <td><button type="button" id="makeAdminBtn" onclick="openMakeAdminModel('@user.Email','@user.Name')" class="btn btn-danger">Make Admin</button></td>
+                                        </tr>
+                                    }
+
+                                </tbody>
+                            </table>
+                        </div>
+                    }
+                    else
+                    {
+                        <h3>No Users</h3>
+                    }
+                }
+
+            </div>
+
+        </div>
+
+    </section>
+</div>
+
+<div class="modal fade" id="makeAdminModal" tabindex="-1" aria-labelledby="deleteModalLabel" aria-hidden="true">
+    <div class="modal-dialog modal-dialog-centered">
+        <div class="modal-content">
+            <div class="modal-header">
+                <h5 class="modal-title" id="deleteModalLabel">Confirm Delete</h5>
+                <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+            </div>
+            <div id="modelBody" class="modal-body">
+                
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
+                <button type="button" onclick="makeAdmin()" id="confirmBtn" class="btn btn-danger">Yes</button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<div id="toastMsg" class="toast-container position-fixed bottom-0 end-0 p-3">
+    <div id="toastElement" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
+        <div class="toast-header">
+            <strong id="toastHead" class="me-auto">Success</strong>
+            <button type="button" class="btn-close" data-bs-dismiss="toast" aria-label="Close"></button>
+        </div>
+        <div id="toastBody" class="toast-body">
+            Admin Access Given
+        </div>
+    </div>
+</div>
+
+<script>
+    let userEmail = null;
+    const toastElement = $('#toastElement');
+    const toast = new bootstrap.Toast(toastElement, {
+        autohide: true,
+        delay: 5000
+    });
+
+    function openMakeAdminModel(email, name) {
+        userEmail = email;
+        $("#modelBody").text(`Are you sure. Make ${name} as Admin ?`)
+        const adminModal = new bootstrap.Modal($('#makeAdminModal'));
+        adminModal.show();
+    }
+
+    function makeAdmin() {
+        $.post('/Admin/MakeAdmin', { email: userEmail }, (data) => {
+            if (data.success) {
+                showToast("Success", "Admin Access Give", "bg-success")
+            } else {
+                showToast("Error", "Admin Access Failed", "bg-danger")
+            }
+        })
+    }
+
+    function showToast(title, message, bgClass) {
+        $('#toastElement').removeClass('bg-success bg-danger bg-warning').addClass(bgClass);
+        $('#toastHead').text(title);
+        $('#toastBody').text(message);
+
+        toast.show();
+    }
+</script>
 
