--- a/Ecommerce_Application/Views/Shared/_Header.cshtml
+++ b/Ecommerce_Application/Views/Shared/_Header.cshtml
@@ -7,7 +7,7 @@
 <header style="position: fixed; top: 0; width: 100%; z-index: 100">
     <nav class="navbar navbar-expand-lg" style="background-color: #80A1BA; font-size: 18px; height: 70px; font-weight: 500;">
         <div class="container-fluid">
-            <a class="navbar-brand text-light" href="@Url.Action("Index","Home")">ClickBuy</a>
+            <a class="navbar-brand text-light">ClickBuy</a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
