--- a/Ecommerce_Application/Views/Shared/_AdminLayout.cshtml
+++ b/Ecommerce_Application/Views/Shared/_AdminLayout.cshtml
@@ -20,7 +20,7 @@
 </head>
 <body>
     <div class="d-flex">
-        <div class="sidebar d-flex flex-column pt-4 text-center" style="background-color: #80A1BA; min-height: 100vh">
+        <div class="sidebar d-flex flex-column pt-4 text-center" style="background-color: #80A1BA; box-sizing: border-box; width: 200px; min-height: 100vh">
             <h4 class="text-center mb-4 text-white ps-2 pe-2">Admin Dashboard</h4>
 
             <a href="#" class="nav-link admin-btn p-3 mb-2 active" data-url="/Admin/Dashboard" style="font-weight: 500">Sales</a>
@@ -28,7 +28,7 @@
             <a href="#" class="nav-link admin-btn p-3 mb-2" data-url="/Admin/Orders" style="font-weight: 500">Orders</a>
             <a href="#" class="nav-link admin-btn p-3 mb-2" data-url="/Admin/AddProduct" style="font-weight: 500">Add Product</a>
             <a href="#" class="nav-link admin-btn p-3 mb-2" data-url="/Admin/Users" style="font-weight: 500">Users</a>
-            <a href="/User/Login" class="nav-link p-3 mb-2" style="font-weight: 500">Log Out</a>
+            <a href="@Url.Action("Logout","User")" class="nav-link p-3 mb-2" style="font-weight: 500">Log Out</a>
         </div>
         <div class="main-content flex-grow-1" style="min-height: 100vh;">
             <div id="contentHolder">
