--- a/Ecommerce_Application/Views/Admin/_Dashboard.cshtml
+++ b/Ecommerce_Application/Views/Admin/_Dashboard.cshtml
@@ -62,4 +62,4 @@
 </section>
 
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
-<script src="~/Scripts/App/SalesDashboard.js"></script>
+<script src="~/Scripts/App/SalesDashboard.js?v=1.0"></script>
