--- a/Ecommerce_Application/Views/Shared/_Header.cshtml
+++ b/Ecommerce_Application/Views/Shared/_Header.cshtml
@@ -1,7 +1,6 @@
-﻿@model List<string>
+﻿@model Ecommerce_Application.Models.HeaderModel
 @{
-    var isCartValue = ViewData["isCart"];
-    bool isCart = (isCartValue is bool) ? (bool)isCartValue : false;
+    bool isCart = Model.IsCart;
 }
 
 <header style="position: fixed; top: 0; width: 100%; z-index: 100">
@@ -21,9 +20,9 @@
                             Category
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            @if (Model != null && Model.Any())
+                            @if (Model.Categories != null && Model.Categories.Any())
                             {
-                                foreach (var category in Model)
+                                foreach (var category in Model.Categories)
                                 {
                                     <li><a class="dropdown-item" href="@Url.Action("Category","Product", new {id = category})">@category</a></li>
                                 }
@@ -45,14 +44,20 @@
                 <form class="d-flex ms-4 me-5 px-2 justify-content-between align-items-center">
                     @if (!isCart)
                     {
-                        <a class="d-block text-decoration-none" href="@Url.Action("Index","Cart")">
-                            <i class="fa-solid fa-cart-shopping" style="font-size: 20px; color: white"></i>
-                        </a>
+                        <div style="position: relative;">
+                            <a class="d-block text-decoration-none" href="@Url.Action("Index","Cart")">
+                                <i class="fa-solid fa-cart-shopping" style="font-size: 30px; color: white"></i>
+                            </a>
+                            @if (Model.CartItemsCount > 0)
+                            {
+                                <h6 id="cartItemCount" style="position: absolute; top: -2px; right: 38%">@Model.CartItemsCount</h6>
+                            }
+                        </div>
                     }
                         <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                             <li class="nav-item dropdown">
                                 <a class="nav-link text-light active" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                                    <i class="fa-solid fa-user" style="font-size: 20px; color: white"></i>
+                                    <i class="fa-solid fa-user" style="font-size: 30px; color: white"></i>
                                 </a>
                                 <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
                                     <li><a href="@Url.Action("Index","Profile")" class="dropdown-item">Profile</a></li>
